@@ -162,7 +162,7 @@ class CSVStatsWriterTest {
         assertEquals(4, lines.size());
 
         // Check the header
-        assertArrayEquals(PlayerStatsLine.headers, lines.get(0));
+        assertArrayEquals(PlayerStatsLine.headers, lines.getFirst());
 
         // Check the lines
         assertArrayEquals(lineOne.getValues(), lines.get(1));
@@ -195,7 +195,7 @@ class CSVStatsWriterTest {
         assertEquals(4, lines.size());
 
         // Check the header
-        assertArrayEquals(PlayerStatsLine.headers, lines.get(0));
+        assertArrayEquals(PlayerStatsLine.headers, lines.getFirst());
 
         // Check the lines
         assertArrayEquals(lineOne.getValues(), lines.get(1));
